--- a/template/index.html
+++ b/template/index.html
@@ -1,25 +1,34 @@
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--description-->
-<meta name="description" content="{[description]}" />
-<!--Keywords-->
-<meta name="keywords" content="{[keywords]}" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--description-->
+    <meta name="description" content="{[description]}" />
+    <!--Keywords-->
+    <meta name="keywords" content="{[keywords]}" />
 </head>
 <loadingarea></loadingarea>
 <div id='container'>
-<style>#container{opacity:0;word-wrap:break-word;word-break:break-all;max-width:50%;overflow:hidden}</style>
-{(MainTitle)}<title>{[title]}{[titlemiddle]}{[sitename]}</title>{(MainTitleEnd)}
-<body>
-{(PostTitle)}{[title]}{(PostTitleEnd)}
-{(PostDate)}{[date]}{(PostDateEnd)}
-{(PostContent)}
-{[content]}
-{(PostContentEnd)}
-{(PostTag)}{[tags]}{(PostTagEnd)}
-{(PostID)}{[pid]}{(PostIDEnd)}
-{(PostCover)}{[cover]}{(PostCoverEnd)}
-<div style='display:none;'>{(PageType)}{[type]}{(PageTypeEnd)}</div>
-<script src="./main.js?233"></script>
-</body>
+    <style>
+        #container {
+            opacity: 0;
+            word-wrap: break-word;
+            word-break: break-all;
+            max-width: 50%;
+            overflow: hidden
+        }
+    </style>
+    {(MainTitle)}
+    <title>{[title]}{[titlemiddle]}{[sitename]}</title>
+    {(MainTitleEnd)}
+
+    <body>
+        {(PostTitle)}{[title]}{(PostTitleEnd)} 
+        {(PostDate)}{[date]}{(PostDateEnd)} 
+        {(PostContent)} {[content]} {(PostContentEnd)} 
+        {(PostTag)}{[tags]}{(PostTagEnd)} 
+        {(PostID)}{[pid]}{(PostIDEnd)} 
+        {(PostCover)}{[cover]}{(PostCoverEnd)}
+        <div style='display:none;'>{(PageType)}{[type]}{(PageTypeEnd)}</div>
+        <script src="./barn/main.js"></script>
+    </body>
 </div>
