--- a/template/loading.otp.html
+++ b/template/loading.otp.html
@@ -46,7 +46,7 @@
         animation: loadout 0.5s ease forwards;
     }
 </style>
-<div class='loading' id='loading'><img src='./loadingcloth.gif' id='loadingpic'></img>
+<div class='loading' id='loading'><img src='./{[barndir]}loadingcloth.gif' id='loadingpic'></img>
 </div>
 <loadset style='display:none'>
     { "animations": { "in": { "id:loading": "loadshow" }, "out": { "id:loading": "loadhide" } }, "listening":"id:loading" }
