--- a/template/cloth.otp.html
+++ b/template/cloth.otp.html
@@ -2,14 +2,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href='./style.css' rel="stylesheet" />
+    <link href='./{[barndir]}style.css' rel="stylesheet" />
 </clothhead>
+
 <body>
     <nav class="navbar">
-      <!--NavBoard-->
-      <span>
+        <!--NavBoard-->
+        <span>
         <img src='https://i.loli.net/2019/05/26/5cea55d673a1995942.jpg' class='avatar'></img>
       </span>
-      <p class='navmenu'><a href='/' class='nava'>首页</a></p></nav>
-		{[main]}
+        <p class='navmenu'><a href='/' class='nava'>首页</a></p>
+    </nav>
+    {[main]}
 </body>
