Update the template

--- a/template/index.html
+++ b/template/index.html
@@ -28,6 +28,8 @@
         {(PostTag)}{[tags]}{(PostTagEnd)} 
         {(PostID)}{[pid]}{(PostIDEnd)} 
         {(PostCover)}{[cover]}{(PostCoverEnd)}
+        {(PubTime)}{[pubtime]}{(PubTimeEnd)}
+        {(EditTime)}{[edittime]}{(EditTimeEnd)}
         <div style='display:none;'>{(PageType)}{[type]}{(PageTypeEnd)}</div>
         <script src="./barn/main.js"></script>
     </body>
